2010-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExecute.c (EvalStatsCmd): change 'evalstats' to
	return data to interp by default, or if given an arg, use that as
	filename to output to (accepts 'stdout' and 'stderr').
	Fix output to print used inst count data.
	* generic/tclCkalloc.c: change TclDumpMemoryInfo sig to allow
	* generic/tclInt.decls: objPtr as well as FILE* as output.
	* generic/tclIntDecls.h:

2010-09-24  Andreas Kupries  <andreask@activestate.com>

	* tclWinsock.c: [Bug 3056775]: Fixed race condition between thread
	and internal co-thread access of a socket's structure because of
	the thread not using the socketListLock in TcpAccept(). Added
	documentation on how the module works to the top.

2010-09-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdAH.c:	Fix cases where value returned by 
	* generic/tclEvent.c:	Tcl_GetReturnOptions() was leaked.
	* generic/tclMain.c:	Thanks to Jeff Hobbs for discovery of the
	anti-pattern to seek and destroy.

2010-09-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/file.n (file readlink): [Bug 3070580]: Typofix.

2010-09-10  Donal K. Fellows  <dkf@users.sf.net>

	* doc/regsub.n: [Bug 3063568]: Fix for gotcha in example due to Tcl's
	special handling of backslash-newline. Makes example slightly less
	pure, but more useful.

2010-09-08  Andreas Kupries  <andreask@activestate.com>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* doc/tm.n: Added underscore to the set of characters accepted in
	module names. This is true for quite some time in the code, this
	change catches up the documentation.

2010-09-08  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.9 release.

	* win/tclWin32Dll.c:	#ifdef protections to permit builds with
	* win/tclWinChan.c:	mingw on amd64 systems. Thanks to "mescalinum"
	* win/tclWinFCmd.c:	for reporting and testing.

2010-09-06  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/configure.in, generic/tclIOUtil.c (Tcl_Stat): Updated so that