@@ -1,3 +1,8 @@
+2010-10-09  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c: fix overallocation of exec stack in TEBC
+	(mixing numwords and numbytes)
+
 2010-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclExecute.c (EvalStatsCmd): change 'evalstats' to
